--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
  <div class="login">
 	<h1 style="text-align:center">Sentiment based recommendation system</h1>
 
-    <form align="center" action="{{ url_for('predict')}}" method="post">
+    <form align="center" action="/predict" method="post">
         
         <p style="font-size:18px;">Enter the username: </p> 
     	<input type="text" style="text-align:center" name="Username" placeholder="Username" required="required" />
